      * Faster handling of asteroids with large exclusion areas
      * Added fuel_usage_mod ship stat.
      * Fixed player losing navigation targets when unidiff is applied
      * Fixed ai.idir giving wrong answer by M_PI_2 in some cases
      * Threaded more loading components
      * Lua require now caches chunks
      * Dropped SDL_image fallback
      * Support for Tracy
   * Fixes
      * PSO and Mizar nebulas have trails again

* 0.11.3 (unreleased)
   * Don't let the player trade ships when they have mission cargo
   * Fixed not being able to turn off point defense weapons
   * `sciencegonewrong/02_sciwrong`: make the drones not hostile to other factions
   * `neutral/baron_comm`: fixed trivial warning when trying to clean up baron comm event

* 0.11.2
   * Stopped autonav from preventing wobble and overshooting by crashing the entire game

* 0.11.1
   * Give all ammo back to player after doing obelisk
   * Fixed player being invincible after completing an obelisk
   * Fixed a crash when loading games while a landing hook was running
   * Fixed race condition in threadpool
   * Fixed asteroids spawning in not proper shapes
   * Fixed autonav wobble and overshooting
   * Point defense won't shoot at disabled pilots anymore
   * Fixed battery descriptions
   * Discovering a hidden jump will make both directions known
   * Fixed AI trying to scan hostile targets they lost track of
   * Properly save and load reward_value to and from saves
   * Fixed events and missions being able to trigger in obelisk tests
   * Fixed beam weapons not hitting asteroids
   * Properly compute weapon range with launch_range modifiers
   * Fixed some range checks with inrange weapon sets
   * Fixed Empire Pacifier mass being too low
   * Fixed warning when looking at internal flow amplifier descriptions
   * Removed Soromid Ira turret and forward weapon stats
   * Fixed reality rip and avatar of sirichana abilities giving errors when the AI tries to use them