@@ -23,6 +23,7 @@
       * Lua require now caches chunks
       * Dropped SDL_image fallback
       * Support for Tracy
+      * Warn the player if they try to use a name with all space characters
    * Fixes
       * PSO and Mizar nebulas have trails again
 
